feat: Update app name to Anshim Scanner v2.0
Updates the application name across `package.json`, `metadata.json`, and `translations.ts` to reflect the new version. This includes changes to the package name, metadata title, and in-app instructional content.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "안심-스캐너-(anshim-scanner)",
+  "name": "안심-스캐너v2.0-(anshim-scanner-v2.0-)",
   "private": true,
   "version": "0.0.0",
   "type": "module",
