--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "안심-스캐너v2.0-(anshim-scanner-v2.0-)",
+  "name": "안심-스캐너-v-2.0-(anshim-scanner-v-2.0)",
   "private": true,
   "version": "0.0.0",
   "type": "module",
